# sophia_1

./: .env.example  .gitignore
backend/: alembic.ini  pyproject.toml  seed_demo.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_orchestrator_models.py
backend/src/sophia/: __init__.py  config.py  exceptions.py  main.py
backend/src/sophia/agent/: __init__.py  briefing.py  learning.py  models.py  router.py  schemas.py  service.py
backend/src/sophia/analytics/: __init__.py  anomaly.py  briefing.py  campaigns.py  collector.py  decision_trace.py  funnel.py  icp.py  kpi.py  models.py  router.py  schemas.py  sentiment.py  sov.py  utm.py
backend/src/sophia/approval/: __init__.py  cli.py  events.py  models.py  (+3 more)
backend/tests/: conftest.py  test_algorithm_detection.py  test_analytics_models.py  test_analytics_services.py  test_approval_router.py  test_approval_service.py  test_briefing.py  test_campaigns.py  test_capabilities.py  test_chat.py  test_claude_cli.py  test_client_router.py  test_client_service.py  test_collector.py  test_competitor_monitoring.py  test_content_generation.py  test_content_lifecycle.py  test_decision_trace.py  test_diagnostics.py  test_editor_cycle.py  test_intelligence_service.py  test_kpi.py  test_learning.py  test_notifications.py  test_observer_judge.py  test_onboarding.py  test_orchestrator_models.py  test_publishing.py  test_quality_gates.py  test_recovery.py  test_research_service.py  test_semantic_embeddings.py  test_semantic_sync.py  test_skill_governance.py  test_telegram_handlers.py  test_utm.py  test_voice.py
(+170 files in other folders)
