[project]
name = "sophia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "NomadonaTrip", email = "telltaio@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.1",
    "rapidfuzz>=3.14.3",
    "sqlalchemy>=2.0.47",
    "sqlcipher3>=0.6.2",
    "structlog>=25.5.0",
    "textstat>=0.7.13",
]

[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
