[project]
name = "sophia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "NomadonaTrip", email = "telltaio@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "apscheduler>=3.10.0,<4.0",
    "fastapi>=0.133.1",
    "flagembedding>=1.3.5",
    "lancedb>=0.29.2",
    "python-multipart>=0.0.20",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.1",
    "rapidfuzz>=3.14.3",
    "spacy>=3.8.11",
    "sse-starlette>=3.2.0",
    "sqlalchemy>=2.0.47",
    "sqlcipher3>=0.6.2",
    "structlog>=25.5.0",
    "tantivy>=0.25.1",
    "textstat>=0.7.13",
    "transformers<5.0",
]

[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
